--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -9,6 +9,19 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/PB22UKNL/Schubert - Abstract and Concrete Categories - The Joy of Cats.pdf}
 }
 
+@book{bassAlgebraicKtheory1968,
+  title = {Algebraic {{K-theory}}},
+  author = {Bass, Hyman},
+  date = {1968},
+  eprint = {zOaEAAAAIAAJ},
+  eprinttype = {googlebooks},
+  publisher = {W. A. Benjamin},
+  isbn = {978-0-8053-0660-6},
+  langid = {english},
+  pagetotal = {810},
+  file = {/Users/abrahamrojasvega/Zotero/storage/HS73249X/bass.pdf}
+}
+
 @book{berrickApproachAlgebraicKtheory1982,
   title = {An Approach to Algebraic {{K-theory}}},
   author = {Berrick, A. J.},
@@ -35,6 +48,21 @@
   langid = {english},
   keywords = {Abelian group,Cohomology,Groups,Gruppe (Math.),Kohomologie,notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
+}
+
+@article{cohenStabilityPhenomenaTopology2009,
+  title = {Stability Phenomena in the Topology of Moduli Spaces},
+  author = {Cohen, Ralph L.},
+  date = {2009},
+  journaltitle = {Surveys in Differential Geometry},
+  volume = {14},
+  number = {1},
+  pages = {23--56},
+  issn = {10529233, 21644713},
+  doi = {10.4310/SDG.2009.v14.n1.a2},
+  abstract = {The recent proof by Madsen and Weiss of Mumford’s conjecture on the stable cohomology of moduli spaces of Riemann surfaces, was a dramatic example of an important stability theorem about the topology of moduli spaces. In this article we give a survey of families of classifying spaces and moduli spaces where “stability phenomena” occur in their topologies. Such stability theorems have been proved in many situations in the history of topology and geometry, and the payoff has often been quite remarkable. In this paper we discuss classical stability theorems such as the Freudenthal suspension theorem, Bott periodicity, and Whitney’s embedding theorems. We then discuss more modern examples such as those involving configuration spaces of points in manifolds, holomorphic curves in complex manifolds, gauge theoretic moduli spaces, the stable topology of general linear groups, and pseudoisotopies of manifolds. We then discuss the stability theorems regarding the moduli spaces of Riemann surfaces: Harer’s stability theorem on the cohomology of moduli space, and the Madsen-Weiss theorem, which proves a generalization of Mumford’s conjecture. We also describe Galatius’s recent theorem on the stable cohomology of automorphisms of free groups. We end by speculating on the existence of general conditions in which one might expect these stability phenomena to occur.},
+  langid = {english},
+  file = {/Users/abrahamrojasvega/Zotero/storage/V7B7YGYW/Cohen - 2009 - Stability phenomena in the topology of moduli spaces.pdf}
 }
 
 @misc{cohenTopologyFiberBundles,
@@ -270,6 +298,21 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/VFW683ZK/Mirzaii y Kallen - 2002 - Homology stability for unitary groups.pdf}
 }
 
+@article{paninStabilizationOrthogonalSymplectic1990,
+  title = {On Stabilization for Orthogonal and Symplectic Algebraic {{K-theory}}},
+  author = {Panin, I. A.},
+  date = {1990},
+  journaltitle = {Leningr. Math. J.},
+  volume = {1},
+  number = {3},
+  pages = {741--764},
+  issn = {1048-9924},
+  abstract = {Let \$R\$ be a commutative ring with 1. The symplectic groups \$\textbackslash operatorname\{Sp\}\_n(R)\$ and orthogonal groups \$\textbackslash mathrm\{O\}\_\{2 n\}(R)\$ (of Witt index \$n\$ ) are considered. Applying Quillen's plus-construction to these groups, one can define symplectic and orthogonal K-theories. On the other hand, one can use Borel subgroups to define Volodin type K-theories. Nemytov and Solov'ev sketched a proof that these two approaches result in the same Kgroups. The present paper gives a more detailed exposition. The result is useful for stability problems in symplectic and orthogonal Ktheories. Thus, the paper extends Suslin's stability results for general linear groups to orthogonal and symplectic groups over commutative rings. The results are the best possible for the rings R of algebraic integers in number fields. In particular, the groups \$\textbackslash mathrm\{H\}\_\{\textbackslash mathrm\{i\}\}\textbackslash left(\textbackslash mathrm\{O\}\_\{2 \textbackslash mathrm\{n\}\}(\textbackslash mathrm\{R\})\textbackslash right.\$ ) and \$\textbackslash mathrm\{H\}\_\{\textbackslash mathrm\{i\}\}\textbackslash left(\textbackslash mathrm\{Sp\}\_\{2 \textbackslash mathrm\{n\}\}(\textbackslash mathrm\{R\})\textbackslash right)\$ are independent of n for such R when \$\textbackslash mathrm\{n\} \textbackslash geq 2 \textbackslash mathrm\{i\}+1 \textbackslash geq 5\$.},
+  langid = {english},
+  keywords = {19D06,19D55,19G05,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/IDK8BFVX/Panin - 1990 - On stabilization for orthogonal and symplectic algebraic K-theory.pdf;/Users/abrahamrojasvega/Zotero/storage/P623G868/zbmath.org.html}
+}
+
 @article{quillenHomotopyPropertiesPoset1978a,
   title = {Homotopy Properties of the Poset of Nontrivial {\emph{P}}-Subgroups of a Group},
   author = {Quillen, Daniel},
@@ -294,6 +337,21 @@
   isbn = {978-1-108-85589-1 978-1-108-47962-2},
   keywords = {notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
+}
+
+@article{segalTopologySpacesRational1979,
+  title = {The Topology of Spaces of Rational Functions},
+  author = {Segal, Graeme},
+  date = {1979-12-01},
+  journaltitle = {Acta Math.},
+  volume = {143},
+  number = {1},
+  pages = {39--72},
+  issn = {1871-2509},
+  doi = {10.1007/BF02392088},
+  langid = {english},
+  keywords = {Rational Function},
+  file = {/Users/abrahamrojasvega/Zotero/storage/QFKLM2UQ/Segal - 1979 - The topology of spaces of rational functions.pdf}
 }
 
 @book{srinivasAlgebraicKTheory1996,
